force-app/main/default/objects/LimiteCredito__c/LimiteCredito__c.object-meta.xml
<CustomObject>
    <label>Limite de Crédito</label>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>Nome do Limite</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Limites de Créditos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>