force-app/main/default/objects/LimiteCredito__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Limites de Créditos</relationshipLabel>
    <relationshipName>Limites_de_Cr_ditos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>