force-app/main/default/objects/LimiteCredito__c/fields/BlockedCredit__c.field-meta.xml
<CustomField>
    <fullName>BlockedCredit__c</fullName>
    <label>Crédito Bloqueado</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>