force-app/main/default/objects/LimiteCredito__c/fields/Credito__c.field-meta.xml
<CustomField>
    <fullName>Credito__c</fullName>
    <label>Crédito</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>