force-app/main/default/objects/LimiteCredito__c/fields/CreditoDisponivel__c.field-meta.xml
<CustomField>
    <fullName>CreditoDisponivel__c</fullName>
    <label>Crédito Disponivel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>