force-app/main/default/objects/LimiteCredito__c/fields/Cultura__c.field-meta.xml
<CustomField>
    <fullName>Cultura__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cultura</label>
    <referenceTo>Cultura__c</referenceTo>
    <relationshipLabel>Limites de Créditos</relationshipLabel>
    <relationshipName>Limites_de_Cr_ditos</relationshipName>
    <type>Lookup</type>
</CustomField>