force-app/main/default/objects/LimiteCredito__c/fields/DataConcessao__c.field-meta.xml
<CustomField>
    <fullName>DataConcessao__c</fullName>
    <label>Data Concessão</label>
    <type>Date</type>
</CustomField>