force-app/main/default/objects/LimiteCredito__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>Data Vencimento</label>
    <type>Date</type>
</CustomField>