force-app/main/default/objects/LimiteCredito__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>180</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>