force-app/main/default/objects/LimiteCredito__c/fields/Garantia__c.field-meta.xml
<CustomField>
    <fullName>Garantia__c</fullName>
    <label>Garantia</label>
    <length>2</length>
    <type>Text</type>
</CustomField>