force-app/main/default/objects/LimiteCredito__c/fields/Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Guarantee__c</fullName>
    <label>Garantia</label>
    <length>2</length>
    <type>Text</type>
</CustomField>