force-app/main/default/objects/LimiteCredito__c/fields/LimitBalance__c.field-meta.xml
<CustomField>
    <fullName>LimitBalance__c</fullName>
    <label>Saldo Limite</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>