force-app/main/default/objects/LimiteCredito__c/fields/MaintenanceDate__c.field-meta.xml
<CustomField>
    <fullName>MaintenanceDate__c</fullName>
    <label>Data Manutenção</label>
    <type>Date</type>
</CustomField>