force-app/main/default/objects/LimiteCredito__c/fields/OrganizacaoVendas__c.field-meta.xml
<CustomField>
    <fullName>OrganizacaoVendas__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organização de Vendas</label>
    <referenceTo>SalesOrg__c</referenceTo>
    <relationshipLabel>Limites de Créditos</relationshipLabel>
    <relationshipName>Limites_de_Cr_ditos</relationshipName>
    <type>Lookup</type>
</CustomField>