force-app/main/default/objects/LimiteCredito__c/fields/Safra__c.field-meta.xml
<CustomField>
    <fullName>Safra__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Safra</label>
    <referenceTo>Safra__c</referenceTo>
    <relationshipLabel>Limites de Créditos</relationshipLabel>
    <relationshipName>Limites_de_Cr_ditos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>